--- a/src/main/resources/assets/erc/lang/ja_jp.lang
+++ b/src/main/resources/assets/erc/lang/ja_jp.lang
@@ -1,21 +1,20 @@
-﻿
-tile.railNormal.name=基本レール
-tile.railRedAccel.name=加速レール
-tile.railConstVelocity.name=等速レール
-tile.railDetector.name=検知レール
-tile.railBranch.name=分岐レール
-tile.railInvisible.name=透明レール
+﻿tile.railnormal.name=基本レール
+tile.railredaccel.name=加速レール
+tile.railconst.name=等速レール
+tile.raildetector.name=検知レール
+tile.railbranch.name=分岐レール
+tile.railinvisible.name=透明レール
 
 item.railpipe.name=レールパイプ
 item.wrench_c1.name=レンチ
 
-item.BlockPlacer.name=魔法のブロック空中設置ステッキ！
-item.ERCSmoothAll.name=魔法のレール全部滑らかにしちゃうステッキ！
+item.itemwrenchplaceblock.name=魔法のブロック空中設置ステッキ！
+item.smoothall.name=魔法のレール全部滑らかにしちゃうステッキ！
 
-item.Coaster.name=コースター
-item.CoasterConnector.name=連結コースター
-item.CoasterMono.name=単座コースター
+item.coaster.name=コースター
+item.coasterconnector.name=連結コースター
+item.coastermono.name=単座コースター
 
-item.SwitchRailModel.name=レールモデル切り替え器
+item.switchrailmodel.name=レールモデル切り替え器
 
-item.ERCSUSHI.name=SUSHI
+item.sushi.name=SUSHI
