Fix issues with previous two commits

--- a/src/main/resources/assets/erc/lang/en_us.lang
+++ b/src/main/resources/assets/erc/lang/en_us.lang
@@ -17,3 +17,4 @@ item.coastermono.name=Single Seat Coaster
 
 item.switchrailmodel.name=Switch Rail Model
 item.sushi.name=SUSHI
+item.entryticket.name=Entry Ticket
